// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`UI スナップショット > Home > ダークモード 1`] = `
<div
  class="home dark"
>
  <header
    class="home-header"
  >
    <div
      class="home-title"
    >
      <h1>
        react-
        <span>
          tools
        </span>
      </h1>
      <p>
        17
         tool
        s
         available
      </p>
    </div>
    <div
      class="home-header-actions"
    >
      <div
        class="home-search-wrap"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-search home-search-icon"
          fill="none"
          height="13"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="13"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m21 21-4.34-4.34"
          />
          <circle
            cx="11"
            cy="11"
            r="8"
          />
        </svg>
        <input
          aria-label="ツール検索"
          class="home-search"
          placeholder="検索..."
          value=""
        />
      </div>
      <button
        aria-pressed="false"
        class="home-edit-btn "
      >
        編集
      </button>
    </div>
  </header>
  <div
    class="home-grid"
  >
    <a
      class="home-card"
      data-discover="true"
      href="/oneshot"
    >
      <div
        class="home-card-icon"
        style="background: linear-gradient(135deg, #ff2d7b, #a855f7);"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-zap"
          fill="none"
          height="20"
          stroke="white"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4 14a1 1 0 0 1-.78-1.63l9.9-10.2a.5.5 0 0 1 .86.46l-1.92 6.02A1 1 0 0 0 13 10h7a1 1 0 0 1 .78 1.63l-9.9 10.2a.5.5 0 0 1-.86-.46l1.92-6.02A1 1 0 0 0 11 14z"
          />
        </svg>
      </div>
      <div
        class="home-card-name"
      >
        OneShot
      </div>
      <div
        class="home-card-desc"
      >
        プロンプトを保存・編集・蒸留・検証する1画面ツール
      </div>
      <span
        class="home-card-tag"
      >
        prompt
      </span>
    </a>
    <a
      class="home-card"
      data-discover="true"
      href="/phantom"
    >
      <div
        class="home-card-icon"
        style="background: linear-gradient(135deg, #00ffe7, #0a5eaa);"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-wand-sparkles"
          fill="none"
          height="20"
          stroke="white"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m21.64 3.64-1.28-1.28a1.21 1.21 0 0 0-1.72 0L2.36 18.64a1.21 1.21 0 0 0 0 1.72l1.28 1.28a1.2 1.2 0 0 0 1.72 0L21.64 5.36a1.2 1.2 0 0 0 0-1.72"
          />
          <path
            d="m14 7 3 3"
          />
          <path
            d="M5 6v4"
          />
          <path
            d="M19 14v4"
          />
          <path
            d="M10 2v2"
          />
          <path
            d="M7 8H3"
          />
          <path
            d="M21 16h-4"
          />
          <path
            d="M11 3H9"
          />
        </svg>
      </div>
      <div
        class="home-card-name"
      >
        Phantom
      </div>
      <div
        class="home-card-desc"
      >
        KMP置換・LCGランダム変換によるテキストマスクツール
      </div>
      <span
        class="home-card-tag"
      >
        text
      </span>
    </a>
    <a
      class="home-card"
      data-discover="true"
      href="/forge"
    >
      <div
        class="home-card-icon"
        style="background: linear-gradient(135deg, #f97316, #ef4444);"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-hammer"
          fill="none"
          height="20"
          stroke="white"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m15 12-9.373 9.373a1 1 0 0 1-3.001-3L12 9"
          />
          <path
            d="m18 15 4-4"
          />
          <path
            d="m21.5 11.5-1.914-1.914A2 2 0 0 1 19 8.172v-.344a2 2 0 0 0-.586-1.414l-1.657-1.657A6 6 0 0 0 12.516 3H9l1.243 1.243A6 6 0 0 1 12 8.485V10l2 2h1.172a2 2 0 0 1 1.414.586L18.5 14.5"
          />
        </svg>
      </div>
      <div
        class="home-card-name"
      >
        Forge
      </div>
      <div
        class="home-card-desc"
      >
        PascalCase / camelCase / snake_case / kebab-case 変換 ＋ MDラッパー
      </div>
      <span
        class="home-card-tag"
      >
        text
      </span>
    </a>
    <a
      class="home-card"
      data-discover="true"
      href="/mermaid"
    >
      <div
        class="home-card-icon"
        style="background: linear-gradient(135deg, #a855f7, #6366f1);"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-chart-column"
          fill="none"
          height="20"
          stroke="white"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3 3v16a2 2 0 0 0 2 2h16"
          />
          <path
            d="M18 17V9"
          />
          <path
            d="M13 17V5"
          />
          <path
            d="M8 17v-3"
          />
        </svg>
      </div>
      <div
        class="home-card-name"
      >
        Mermaid
      </div>
      <div
        class="home-card-desc"
      >
        テンプレート＋カンペ付き Mermaid エディタ。フロー・シーケンス・ER図など7種類
      </div>
      <span
        class="home-card-tag"
      >
        diagram
      </span>
    </a>
    <a
      class="home-card"
      data-discover="true"
      href="/romaji"
    >
      <div
        class="home-card-icon"
        style="background: linear-gradient(135deg, #a855f7, #6366f1);"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-languages"
          fill="none"
          height="20"
          stroke="white"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m5 8 6 6"
          />
          <path
            d="m4 14 6-6 2-3"
          />
          <path
            d="M2 5h12"
          />
          <path
            d="M7 2h1"
          />
          <path
            d="m22 22-5-10-5 10"
          />
          <path
            d="M14 18h6"
          />
        </svg>
      </div>
      <div
        class="home-card-name"
      >
        Romaji
      </div>
      <div
        class="home-card-desc"
      >
        ローマ字をひらがなに変換。変換しない範囲を {} や除外リストで複数指定できる
      </div>
      <span
        class="home-card-tag"
      >
        text
      </span>
    </a>
    <a
      class="home-card"
      data-discover="true"
      href="/draft"
    >
      <div
        class="home-card-icon"
        style="background: linear-gradient(135deg, #0d9488, #6366f1);"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-pen-line"
          fill="none"
          height="20"
          stroke="white"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M13 21h8"
          />
          <path
            d="M21.174 6.812a1 1 0 0 0-3.986-3.987L3.842 16.174a2 2 0 0 0-.5.83l-1.321 4.352a.5.5 0 0 0 .623.622l4.353-1.32a2 2 0 0 0 .83-.497z"
          />
        </svg>
      </div>
      <div
        class="home-card-name"
      >
        Draft
      </div>
      <div
        class="home-card-desc"
      >
        マインドマップで論点整理 → 文章を組み立て → チャット適性指標でチェック
      </div>
      <span
        class="home-card-tag"
      >
        text
      </span>
    </a>
    <a
      class="home-card"
      data-discover="true"
      href="/stencil"
    >
      <div
        class="home-card-icon"
        style="background: linear-gradient(135deg, #6366f1, #a855f7);"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-file-text"
          fill="none"
          height="20"
          stroke="white"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z"
          />
          <path
            d="M14 2v5a1 1 0 0 0 1 1h5"
          />
          <path
            d="M10 9H8"
          />
          <path
            d="M16 13H8"
          />
          <path
            d="M16 17H8"
          />
        </svg>
      </div>
      <div
        class="home-card-name"
      >
        Stencil
      </div>
      <div
        class="home-card-desc"
      >
        %%PLACEHOLDER%%形式の変数テンプレートに値を流し込み、安定フォーマットでドキュメント作成
      </div>
      <span
        class="home-card-tag"
      >
        text
      </span>
    </a>
    <a
      class="home-card"
      data-discover="true"
      href="/logtree"
    >
      <div
        class="home-card-icon"
        style="background: linear-gradient(135deg, #0d9488, #6366f1);"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-network"
          fill="none"
          height="20"
          stroke="white"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="6"
            rx="1"
            width="6"
            x="16"
            y="16"
          />
          <rect
            height="6"
            rx="1"
            width="6"
            x="2"
            y="16"
          />
          <rect
            height="6"
            rx="1"
            width="6"
            x="9"
            y="2"
          />
          <path
            d="M5 16v-3a1 1 0 0 1 1-1h12a1 1 0 0 1 1 1v3"
          />
          <path
            d="M12 12V8"
          />
        </svg>
      </div>
      <div
        class="home-card-name"
      >
        LogTree
      </div>
      <div
        class="home-card-desc"
      >
        インデントテキストをロジックツリーSVGに変換。右向き・下向きに対応
      </div>
      <span
        class="home-card-tag"
      >
        diagram
      </span>
    </a>
    <a
      class="home-card"
      data-discover="true"
      href="/bookmarks"
    >
      <div
        class="home-card-icon"
        style="background: linear-gradient(135deg, #f97316, #ef4444);"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-bookmark"
          fill="none"
          height="20"
          stroke="white"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M17 3a2 2 0 0 1 2 2v15a1 1 0 0 1-1.496.868l-4.512-2.578a2 2 0 0 0-1.984 0l-4.512 2.578A1 1 0 0 1 5 20V5a2 2 0 0 1 2-2z"
          />
        </svg>
      </div>
      <div
        class="home-card-name"
      >
        Bookmarks
      </div>
      <div
        class="home-card-desc"
      >
        URLをタグ付きで保存・検索。JSONファイルでインポート/エクスポート
      </div>
      <span
        class="home-card-tag"
      >
        util
      </span>
    </a>
    <a
      class="home-card"
      data-discover="true"
      href="/snip"
    >
      <div
        class="home-card-icon"
        style="background: linear-gradient(135deg, #7c6cff, #a855f7);"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-scissors"
          fill="none"
          height="20"
          stroke="white"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="6"
            cy="6"
            r="3"
          />
          <path
            d="M8.12 8.12 12 12"
          />
          <path
            d="M20 4 8.12 15.88"
          />
          <circle
            cx="6"
            cy="18"
            r="3"
          />
          <path
            d="M14.8 14.8 20 20"
          />
        </svg>
      </div>
      <div
        class="home-card-name"
      >
        Snip
      </div>
      <div
        class="home-card-desc"
      >
        テキストを登録してワンクリックでコピー。検索対応のシンプルスニペット管理
      </div>
      <span
        class="home-card-tag"
      >
        util
      </span>
    </a>
    <a
      class="home-card"
      data-discover="true"
      href="/wordmemo"
    >
      <div
        class="home-card-icon"
        style="background: linear-gradient(135deg, #10b981, #6366f1);"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-book-open"
          fill="none"
          height="20"
          stroke="white"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 7v14"
          />
          <path
            d="M3 18a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1h5a4 4 0 0 1 4 4 4 4 0 0 1 4-4h5a1 1 0 0 1 1 1v13a1 1 0 0 1-1 1h-6a3 3 0 0 0-3 3 3 3 0 0 0-3-3z"
          />
        </svg>
      </div>
      <div
        class="home-card-name"
      >
        WordMemo
      </div>
      <div
        class="home-card-desc"
      >
        気になった単語をメモして、AIエージェント向け文献リサーチプロンプトを生成
      </div>
      <span
        class="home-card-tag"
      >
        util
      </span>
    </a>
    <a
      class="home-card"
      data-discover="true"
      href="/errlog"
    >
      <div
        class="home-card-icon"
        style="background: linear-gradient(135deg, #ef4444, #f97316);"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-bug"
          fill="none"
          height="20"
          stroke="white"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 20v-9"
          />
          <path
            d="M14 7a4 4 0 0 1 4 4v3a6 6 0 0 1-12 0v-3a4 4 0 0 1 4-4z"
          />
          <path
            d="M14.12 3.88 16 2"
          />
          <path
            d="M21 21a4 4 0 0 0-3.81-4"
          />
          <path
            d="M21 5a4 4 0 0 1-3.55 3.97"
          />
          <path
            d="M22 13h-4"
          />
          <path
            d="M3 21a4 4 0 0 1 3.81-4"
          />
          <path
            d="M3 5a4 4 0 0 0 3.55 3.97"
          />
          <path
            d="M6 13H2"
          />
          <path
            d="m8 2 1.88 1.88"
          />
          <path
            d="M9 7.13V6a3 3 0 1 1 6 0v1.13"
          />
        </svg>
      </div>
      <div
        class="home-card-name"
      >
        ErrLog
      </div>
      <div
        class="home-card-desc"
      >
        エラーを貼り付けてLLM向けプロンプトを生成。返答をMermaid付きで記録・再利用
      </div>
      <span
        class="home-card-tag"
      >
        dev
      </span>
    </a>
    <a
      class="home-card"
      data-discover="true"
      href="/diary"
    >
      <div
        class="home-card-icon"
        style="background: linear-gradient(135deg, #d97706, #f59e0b);"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-notebook-pen"
          fill="none"
          height="20"
          stroke="white"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M13.4 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2v-7.4"
          />
          <path
            d="M2 6h4"
          />
          <path
            d="M2 10h4"
          />
          <path
            d="M2 14h4"
          />
          <path
            d="M2 18h4"
          />
          <path
            d="M21.378 5.626a1 1 0 1 0-3.004-3.004l-5.01 5.012a2 2 0 0 0-.506.854l-.837 2.87a.5.5 0 0 0 .62.62l2.87-.837a2 2 0 0 0 .854-.506z"
          />
        </svg>
      </div>
      <div
        class="home-card-name"
      >
        Diary
      </div>
      <div
        class="home-card-desc"
      >
        日記を書いて箇条書きに変換。LLMでサマリ・キーワードを生成してASCII art形式の.txtで保存
      </div>
      <span
        class="home-card-tag"
      >
        write
      </span>
    </a>
    <a
      class="home-card"
      data-discover="true"
      href="/sketch"
    >
      <div
        class="home-card-icon"
        style="background: linear-gradient(135deg, #8b5cf6, #6366f1);"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-pen-tool"
          fill="none"
          height="20"
          stroke="white"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15.707 21.293a1 1 0 0 1-1.414 0l-1.586-1.586a1 1 0 0 1 0-1.414l5.586-5.586a1 1 0 0 1 1.414 0l1.586 1.586a1 1 0 0 1 0 1.414z"
          />
          <path
            d="m18 13-1.375-6.874a1 1 0 0 0-.746-.776L3.235 2.028a1 1 0 0 0-1.207 1.207L5.35 15.879a1 1 0 0 0 .776.746L13 18"
          />
          <path
            d="m2.3 2.3 7.286 7.286"
          />
          <circle
            cx="11"
            cy="11"
            r="2"
          />
        </svg>
      </div>
      <div
        class="home-card-name"
      >
        Sketch
      </div>
      <div
        class="home-card-desc"
      >
        フロー・ステートマシン・グラフを雑な記述で素早く描く。SVG/PNGでエクスポート
      </div>
      <span
        class="home-card-tag"
      >
        diagram
      </span>
    </a>
    <a
      class="home-card"
      data-discover="true"
      href="/commit"
    >
      <div
        class="home-card-icon"
        style="background: linear-gradient(135deg, #15803d, #22c55e);"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-git-commit-horizontal"
          fill="none"
          height="20"
          stroke="white"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="3"
          />
          <line
            x1="3"
            x2="9"
            y1="12"
            y2="12"
          />
          <line
            x1="15"
            x2="21"
            y1="12"
            y2="12"
          />
        </svg>
      </div>
      <div
        class="home-card-name"
      >
        Commit
      </div>
      <div
        class="home-card-desc"
      >
        type(scope): desc 形式のコミットメッセージを組み立て。type・scope・description の履歴をJSON保存
      </div>
      <span
        class="home-card-tag"
      >
        dev
      </span>
    </a>
    <a
      class="home-card"
      data-discover="true"
      href="/args"
    >
      <div
        class="home-card-icon"
        style="background: linear-gradient(135deg, #1d4ed8, #3b82f6);"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-terminal"
          fill="none"
          height="20"
          stroke="white"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 19h8"
          />
          <path
            d="m4 17 6-6-6-6"
          />
        </svg>
      </div>
      <div
        class="home-card-name"
      >
        Args
      </div>
      <div
        class="home-card-desc"
      >
        コマンドをスペースで分割、インデックス指定でトークンを置換。Diff確認付き
      </div>
      <span
        class="home-card-tag"
      >
        dev
      </span>
    </a>
    <a
      class="home-card"
      data-discover="true"
      href="/pad"
    >
      <div
        class="home-card-icon"
        style="background: linear-gradient(135deg, #6b7280, #9ca3af);"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-sticky-note"
          fill="none"
          height="20"
          stroke="white"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21 9a2.4 2.4 0 0 0-.706-1.706l-3.588-3.588A2.4 2.4 0 0 0 15 3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2z"
          />
          <path
            d="M15 3v5a1 1 0 0 0 1 1h5"
          />
        </svg>
      </div>
      <div
        class="home-card-name"
      >
        Pad
      </div>
      <div
        class="home-card-desc"
      >
        ただのテキストパッド。書いた内容は自動保存される。
      </div>
      <span
        class="home-card-tag"
      >
        write
      </span>
    </a>
  </div>
</div>
`;

exports[`UI スナップショット > Home > ライトモード 1`] = `
<div
  class="home light"
>
  <header
    class="home-header"
  >
    <div
      class="home-title"
    >
      <h1>
        react-
        <span>
          tools
        </span>
      </h1>
      <p>
        17
         tool
        s
         available
      </p>
    </div>
    <div
      class="home-header-actions"
    >
      <div
        class="home-search-wrap"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-search home-search-icon"
          fill="none"
          height="13"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="13"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m21 21-4.34-4.34"
          />
          <circle
            cx="11"
            cy="11"
            r="8"
          />
        </svg>
        <input
          aria-label="ツール検索"
          class="home-search"
          placeholder="検索..."
          value=""
        />
      </div>
      <button
        aria-pressed="false"
        class="home-edit-btn "
      >
        編集
      </button>
    </div>
  </header>
  <div
    class="home-grid"
  >
    <a
      class="home-card"
      data-discover="true"
      href="/oneshot"
    >
      <div
        class="home-card-icon"
        style="background: linear-gradient(135deg, #ff2d7b, #a855f7);"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-zap"
          fill="none"
          height="20"
          stroke="white"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4 14a1 1 0 0 1-.78-1.63l9.9-10.2a.5.5 0 0 1 .86.46l-1.92 6.02A1 1 0 0 0 13 10h7a1 1 0 0 1 .78 1.63l-9.9 10.2a.5.5 0 0 1-.86-.46l1.92-6.02A1 1 0 0 0 11 14z"
          />
        </svg>
      </div>
      <div
        class="home-card-name"
      >
        OneShot
      </div>
      <div
        class="home-card-desc"
      >
        プロンプトを保存・編集・蒸留・検証する1画面ツール
      </div>
      <span
        class="home-card-tag"
      >
        prompt
      </span>
    </a>
    <a
      class="home-card"
      data-discover="true"
      href="/phantom"
    >
      <div
        class="home-card-icon"
        style="background: linear-gradient(135deg, #00ffe7, #0a5eaa);"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-wand-sparkles"
          fill="none"
          height="20"
          stroke="white"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m21.64 3.64-1.28-1.28a1.21 1.21 0 0 0-1.72 0L2.36 18.64a1.21 1.21 0 0 0 0 1.72l1.28 1.28a1.2 1.2 0 0 0 1.72 0L21.64 5.36a1.2 1.2 0 0 0 0-1.72"
          />
          <path
            d="m14 7 3 3"
          />
          <path
            d="M5 6v4"
          />
          <path
            d="M19 14v4"
          />
          <path
            d="M10 2v2"
          />
          <path
            d="M7 8H3"
          />
          <path
            d="M21 16h-4"
          />
          <path
            d="M11 3H9"
          />
        </svg>
      </div>
      <div
        class="home-card-name"
      >
        Phantom
      </div>
      <div
        class="home-card-desc"
      >
        KMP置換・LCGランダム変換によるテキストマスクツール
      </div>
      <span
        class="home-card-tag"
      >
        text
      </span>
    </a>
    <a
      class="home-card"
      data-discover="true"
      href="/forge"
    >
      <div
        class="home-card-icon"
        style="background: linear-gradient(135deg, #f97316, #ef4444);"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-hammer"
          fill="none"
          height="20"
          stroke="white"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m15 12-9.373 9.373a1 1 0 0 1-3.001-3L12 9"
          />
          <path
            d="m18 15 4-4"
          />
          <path
            d="m21.5 11.5-1.914-1.914A2 2 0 0 1 19 8.172v-.344a2 2 0 0 0-.586-1.414l-1.657-1.657A6 6 0 0 0 12.516 3H9l1.243 1.243A6 6 0 0 1 12 8.485V10l2 2h1.172a2 2 0 0 1 1.414.586L18.5 14.5"
          />
        </svg>
      </div>
      <div
        class="home-card-name"
      >
        Forge
      </div>
      <div
        class="home-card-desc"
      >
        PascalCase / camelCase / snake_case / kebab-case 変換 ＋ MDラッパー
      </div>
      <span
        class="home-card-tag"
      >
        text
      </span>
    </a>
    <a
      class="home-card"
      data-discover="true"
      href="/mermaid"
    >
      <div
        class="home-card-icon"
        style="background: linear-gradient(135deg, #a855f7, #6366f1);"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-chart-column"
          fill="none"
          height="20"
          stroke="white"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3 3v16a2 2 0 0 0 2 2h16"
          />
          <path
            d="M18 17V9"
          />
          <path
            d="M13 17V5"
          />
          <path
            d="M8 17v-3"
          />
        </svg>
      </div>
      <div
        class="home-card-name"
      >
        Mermaid
      </div>
      <div
        class="home-card-desc"
      >
        テンプレート＋カンペ付き Mermaid エディタ。フロー・シーケンス・ER図など7種類
      </div>
      <span
        class="home-card-tag"
      >
        diagram
      </span>
    </a>
    <a
      class="home-card"
      data-discover="true"
      href="/romaji"
    >
      <div
        class="home-card-icon"
        style="background: linear-gradient(135deg, #a855f7, #6366f1);"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-languages"
          fill="none"
          height="20"
          stroke="white"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m5 8 6 6"
          />
          <path
            d="m4 14 6-6 2-3"
          />
          <path
            d="M2 5h12"
          />
          <path
            d="M7 2h1"
          />
          <path
            d="m22 22-5-10-5 10"
          />
          <path
            d="M14 18h6"
          />
        </svg>
      </div>
      <div
        class="home-card-name"
      >
        Romaji
      </div>
      <div
        class="home-card-desc"
      >
        ローマ字をひらがなに変換。変換しない範囲を {} や除外リストで複数指定できる
      </div>
      <span
        class="home-card-tag"
      >
        text
      </span>
    </a>
    <a
      class="home-card"
      data-discover="true"
      href="/draft"
    >
      <div
        class="home-card-icon"
        style="background: linear-gradient(135deg, #0d9488, #6366f1);"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-pen-line"
          fill="none"
          height="20"
          stroke="white"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M13 21h8"
          />
          <path
            d="M21.174 6.812a1 1 0 0 0-3.986-3.987L3.842 16.174a2 2 0 0 0-.5.83l-1.321 4.352a.5.5 0 0 0 .623.622l4.353-1.32a2 2 0 0 0 .83-.497z"
          />
        </svg>
      </div>
      <div
        class="home-card-name"
      >
        Draft
      </div>
      <div
        class="home-card-desc"
      >
        マインドマップで論点整理 → 文章を組み立て → チャット適性指標でチェック
      </div>
      <span
        class="home-card-tag"
      >
        text
      </span>
    </a>
    <a
      class="home-card"
      data-discover="true"
      href="/stencil"
    >
      <div
        class="home-card-icon"
        style="background: linear-gradient(135deg, #6366f1, #a855f7);"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-file-text"
          fill="none"
          height="20"
          stroke="white"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z"
          />
          <path
            d="M14 2v5a1 1 0 0 0 1 1h5"
          />
          <path
            d="M10 9H8"
          />
          <path
            d="M16 13H8"
          />
          <path
            d="M16 17H8"
          />
        </svg>
      </div>
      <div
        class="home-card-name"
      >
        Stencil
      </div>
      <div
        class="home-card-desc"
      >
        %%PLACEHOLDER%%形式の変数テンプレートに値を流し込み、安定フォーマットでドキュメント作成
      </div>
      <span
        class="home-card-tag"
      >
        text
      </span>
    </a>
    <a
      class="home-card"
      data-discover="true"
      href="/logtree"
    >
      <div
        class="home-card-icon"
        style="background: linear-gradient(135deg, #0d9488, #6366f1);"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-network"
          fill="none"
          height="20"
          stroke="white"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="6"
            rx="1"
            width="6"
            x="16"
            y="16"
          />
          <rect
            height="6"
            rx="1"
            width="6"
            x="2"
            y="16"
          />
          <rect
            height="6"
            rx="1"
            width="6"
            x="9"
            y="2"
          />
          <path
            d="M5 16v-3a1 1 0 0 1 1-1h12a1 1 0 0 1 1 1v3"
          />
          <path
            d="M12 12V8"
          />
        </svg>
      </div>
      <div
        class="home-card-name"
      >
        LogTree
      </div>
      <div
        class="home-card-desc"
      >
        インデントテキストをロジックツリーSVGに変換。右向き・下向きに対応
      </div>
      <span
        class="home-card-tag"
      >
        diagram
      </span>
    </a>
    <a
      class="home-card"
      data-discover="true"
      href="/bookmarks"
    >
      <div
        class="home-card-icon"
        style="background: linear-gradient(135deg, #f97316, #ef4444);"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-bookmark"
          fill="none"
          height="20"
          stroke="white"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M17 3a2 2 0 0 1 2 2v15a1 1 0 0 1-1.496.868l-4.512-2.578a2 2 0 0 0-1.984 0l-4.512 2.578A1 1 0 0 1 5 20V5a2 2 0 0 1 2-2z"
          />
        </svg>
      </div>
      <div
        class="home-card-name"
      >
        Bookmarks
      </div>
      <div
        class="home-card-desc"
      >
        URLをタグ付きで保存・検索。JSONファイルでインポート/エクスポート
      </div>
      <span
        class="home-card-tag"
      >
        util
      </span>
    </a>
    <a
      class="home-card"
      data-discover="true"
      href="/snip"
    >
      <div
        class="home-card-icon"
        style="background: linear-gradient(135deg, #7c6cff, #a855f7);"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-scissors"
          fill="none"
          height="20"
          stroke="white"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="6"
            cy="6"
            r="3"
          />
          <path
            d="M8.12 8.12 12 12"
          />
          <path
            d="M20 4 8.12 15.88"
          />
          <circle
            cx="6"
            cy="18"
            r="3"
          />
          <path
            d="M14.8 14.8 20 20"
          />
        </svg>
      </div>
      <div
        class="home-card-name"
      >
        Snip
      </div>
      <div
        class="home-card-desc"
      >
        テキストを登録してワンクリックでコピー。検索対応のシンプルスニペット管理
      </div>
      <span
        class="home-card-tag"
      >
        util
      </span>
    </a>
    <a
      class="home-card"
      data-discover="true"
      href="/wordmemo"
    >
      <div
        class="home-card-icon"
        style="background: linear-gradient(135deg, #10b981, #6366f1);"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-book-open"
          fill="none"
          height="20"
          stroke="white"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 7v14"
          />
          <path
            d="M3 18a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1h5a4 4 0 0 1 4 4 4 4 0 0 1 4-4h5a1 1 0 0 1 1 1v13a1 1 0 0 1-1 1h-6a3 3 0 0 0-3 3 3 3 0 0 0-3-3z"
          />
        </svg>
      </div>
      <div
        class="home-card-name"
      >
        WordMemo
      </div>
      <div
        class="home-card-desc"
      >
        気になった単語をメモして、AIエージェント向け文献リサーチプロンプトを生成
      </div>
      <span
        class="home-card-tag"
      >
        util
      </span>
    </a>
    <a
      class="home-card"
      data-discover="true"
      href="/errlog"
    >
      <div
        class="home-card-icon"
        style="background: linear-gradient(135deg, #ef4444, #f97316);"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-bug"
          fill="none"
          height="20"
          stroke="white"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 20v-9"
          />
          <path
            d="M14 7a4 4 0 0 1 4 4v3a6 6 0 0 1-12 0v-3a4 4 0 0 1 4-4z"
          />
          <path
            d="M14.12 3.88 16 2"
          />
          <path
            d="M21 21a4 4 0 0 0-3.81-4"
          />
          <path
            d="M21 5a4 4 0 0 1-3.55 3.97"
          />
          <path
            d="M22 13h-4"
          />
          <path
            d="M3 21a4 4 0 0 1 3.81-4"
          />
          <path
            d="M3 5a4 4 0 0 0 3.55 3.97"
          />
          <path
            d="M6 13H2"
          />
          <path
            d="m8 2 1.88 1.88"
          />
          <path
            d="M9 7.13V6a3 3 0 1 1 6 0v1.13"
          />
        </svg>
      </div>
      <div
        class="home-card-name"
      >
        ErrLog
      </div>
      <div
        class="home-card-desc"
      >
        エラーを貼り付けてLLM向けプロンプトを生成。返答をMermaid付きで記録・再利用
      </div>
      <span
        class="home-card-tag"
      >
        dev
      </span>
    </a>
    <a
      class="home-card"
      data-discover="true"
      href="/diary"
    >
      <div
        class="home-card-icon"
        style="background: linear-gradient(135deg, #d97706, #f59e0b);"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-notebook-pen"
          fill="none"
          height="20"
          stroke="white"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M13.4 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2v-7.4"
          />
          <path
            d="M2 6h4"
          />
          <path
            d="M2 10h4"
          />
          <path
            d="M2 14h4"
          />
          <path
            d="M2 18h4"
          />
          <path
            d="M21.378 5.626a1 1 0 1 0-3.004-3.004l-5.01 5.012a2 2 0 0 0-.506.854l-.837 2.87a.5.5 0 0 0 .62.62l2.87-.837a2 2 0 0 0 .854-.506z"
          />
        </svg>
      </div>
      <div
        class="home-card-name"
      >
        Diary
      </div>
      <div
        class="home-card-desc"
      >
        日記を書いて箇条書きに変換。LLMでサマリ・キーワードを生成してASCII art形式の.txtで保存
      </div>
      <span
        class="home-card-tag"
      >
        write
      </span>
    </a>
    <a
      class="home-card"
      data-discover="true"
      href="/sketch"
    >
      <div
        class="home-card-icon"
        style="background: linear-gradient(135deg, #8b5cf6, #6366f1);"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-pen-tool"
          fill="none"
          height="20"
          stroke="white"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15.707 21.293a1 1 0 0 1-1.414 0l-1.586-1.586a1 1 0 0 1 0-1.414l5.586-5.586a1 1 0 0 1 1.414 0l1.586 1.586a1 1 0 0 1 0 1.414z"
          />
          <path
            d="m18 13-1.375-6.874a1 1 0 0 0-.746-.776L3.235 2.028a1 1 0 0 0-1.207 1.207L5.35 15.879a1 1 0 0 0 .776.746L13 18"
          />
          <path
            d="m2.3 2.3 7.286 7.286"
          />
          <circle
            cx="11"
            cy="11"
            r="2"
          />
        </svg>
      </div>
      <div
        class="home-card-name"
      >
        Sketch
      </div>
      <div
        class="home-card-desc"
      >
        フロー・ステートマシン・グラフを雑な記述で素早く描く。SVG/PNGでエクスポート
      </div>
      <span
        class="home-card-tag"
      >
        diagram
      </span>
    </a>
    <a
      class="home-card"
      data-discover="true"
      href="/commit"
    >
      <div
        class="home-card-icon"
        style="background: linear-gradient(135deg, #15803d, #22c55e);"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-git-commit-horizontal"
          fill="none"
          height="20"
          stroke="white"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="3"
          />
          <line
            x1="3"
            x2="9"
            y1="12"
            y2="12"
          />
          <line
            x1="15"
            x2="21"
            y1="12"
            y2="12"
          />
        </svg>
      </div>
      <div
        class="home-card-name"
      >
        Commit
      </div>
      <div
        class="home-card-desc"
      >
        type(scope): desc 形式のコミットメッセージを組み立て。type・scope・description の履歴をJSON保存
      </div>
      <span
        class="home-card-tag"
      >
        dev
      </span>
    </a>
    <a
      class="home-card"
      data-discover="true"
      href="/args"
    >
      <div
        class="home-card-icon"
        style="background: linear-gradient(135deg, #1d4ed8, #3b82f6);"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-terminal"
          fill="none"
          height="20"
          stroke="white"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 19h8"
          />
          <path
            d="m4 17 6-6-6-6"
          />
        </svg>
      </div>
      <div
        class="home-card-name"
      >
        Args
      </div>
      <div
        class="home-card-desc"
      >
        コマンドをスペースで分割、インデックス指定でトークンを置換。Diff確認付き
      </div>
      <span
        class="home-card-tag"
      >
        dev
      </span>
    </a>
    <a
      class="home-card"
      data-discover="true"
      href="/pad"
    >
      <div
        class="home-card-icon"
        style="background: linear-gradient(135deg, #6b7280, #9ca3af);"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-sticky-note"
          fill="none"
          height="20"
          stroke="white"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21 9a2.4 2.4 0 0 0-.706-1.706l-3.588-3.588A2.4 2.4 0 0 0 15 3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2z"
          />
          <path
            d="M15 3v5a1 1 0 0 0 1 1h5"
          />
        </svg>
      </div>
      <div
        class="home-card-name"
      >
        Pad
      </div>
      <div
        class="home-card-desc"
      >
        ただのテキストパッド。書いた内容は自動保存される。
      </div>
      <span
        class="home-card-tag"
      >
        write
      </span>
    </a>
  </div>
</div>
`;

exports[`UI スナップショット > OneShot > ダークモード（空の状態） 1`] = `
<div
  class="oneshot dark"
>
  <header
    class="os-header"
  >
    <div
      class="os-logo"
    >
      <div
        class="os-logo-icon"
      >
        <svg
          fill="none"
          height="28"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="28"
        >
          <polygon
            fill="currentColor"
            points="13 2 3 14 12 14 11 22 21 10 12 10 13 2"
          />
        </svg>
      </div>
      <h1>
        <span
          class="accent"
        >
          Zero
        </span>
        <span
          class="shot"
        >
          Shot
        </span>
      </h1>
      <span
        class="os-count-badge"
      >
        0
         prompts
      </span>
    </div>
    <div
      class="os-toolbar"
    >
      <button
        class="os-btn os-btn-pink"
      >
        <svg
          fill="currentColor"
          height="14"
          viewBox="0 0 24 24"
          width="14"
        >
          <path
            d="M12 2l2.09 6.26L20.18 10l-6.09 1.74L12 18l-2.09-6.26L3.82 10l6.09-1.74L12 2z"
          />
          <path
            d="M19 15l1.04 3.13L23.18 19l-3.14.87L19 23l-1.04-3.13L14.82 19l3.14-.87L19 15z"
            opacity="0.7"
          />
        </svg>
         
        ZERO
         DISTILL
      </button>
      <button
        class="os-btn os-btn-ghost "
        title="ゴミ箱"
      >
        <svg
          fill="none"
          height="14"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
        >
          <polyline
            points="3 6 5 6 21 6"
          />
          <path
            d="M19 6v14a2 2 0 01-2 2H7a2 2 0 01-2-2V6m3 0V4a2 2 0 012-2h4a2 2 0 012 2v2"
          />
        </svg>
      </button>
      <button
        class="os-btn os-btn-ghost"
      >
        <svg
          fill="none"
          height="14"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
        >
          <path
            d="M21 15v4a2 2 0 01-2 2H5a2 2 0 01-2-2v-4"
          />
          <polyline
            points="7 10 12 15 17 10"
          />
          <line
            x1="12"
            x2="12"
            y1="15"
            y2="3"
          />
        </svg>
      </button>
      <button
        class="os-btn os-btn-ghost"
      >
        <svg
          fill="none"
          height="14"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
        >
          <path
            d="M21 15v4a2 2 0 01-2 2H5a2 2 0 01-2-2v-4"
          />
          <polyline
            points="17 8 12 3 7 8"
          />
          <line
            x1="12"
            x2="12"
            y1="3"
            y2="15"
          />
        </svg>
      </button>
    </div>
  </header>
  <button
    class="os-btn os-btn-purple"
    style="margin-bottom: 16px; width: 100%; justify-content: center;"
  >
    <svg
      fill="none"
      height="14"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="14"
    >
      <line
        x1="12"
        x2="12"
        y1="5"
        y2="19"
      />
      <line
        x1="5"
        x2="19"
        y1="12"
        y2="12"
      />
    </svg>
     新しいプロンプトを追加
  </button>
  <div
    class="os-filter-bar"
  >
    <button
      class="os-btn os-btn-sm os-btn-purple"
    >
      すべて
    </button>
    <button
      class="os-btn os-btn-sm os-btn-ghost"
    >
      未送信
    </button>
    <button
      class="os-btn os-btn-sm os-btn-ghost"
    >
      送信済み
    </button>
    <button
      class="os-btn os-btn-sm os-btn-ghost"
    >
      解決済み
    </button>
    <button
      class="os-btn os-btn-sm os-btn-ghost"
    >
      未解決
    </button>
  </div>
  <div
    class="os-bubble-list"
  >
    <div
      class="os-empty"
    >
      <div
        class="os-empty-icon"
      >
        <svg
          fill="none"
          height="48"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="48"
        >
          <polygon
            fill="currentColor"
            points="13 2 3 14 12 14 11 22 21 10 12 10 13 2"
          />
        </svg>
      </div>
      <p>
        <strong>
          プロンプトがまだありません
        </strong>
      </p>
      <p>
        上の「新しいプロンプトを追加」から始めましょう
      </p>
    </div>
  </div>
</div>
`;

exports[`UI スナップショット > OneShot > ライトモード（空の状態） 1`] = `
<div
  class="oneshot light"
>
  <header
    class="os-header"
  >
    <div
      class="os-logo"
    >
      <div
        class="os-logo-icon"
      >
        <svg
          fill="none"
          height="28"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="28"
        >
          <polygon
            fill="currentColor"
            points="13 2 3 14 12 14 11 22 21 10 12 10 13 2"
          />
        </svg>
      </div>
      <h1>
        <span
          class="accent"
        >
          Zero
        </span>
        <span
          class="shot"
        >
          Shot
        </span>
      </h1>
      <span
        class="os-count-badge"
      >
        0
         prompts
      </span>
    </div>
    <div
      class="os-toolbar"
    >
      <button
        class="os-btn os-btn-pink"
      >
        <svg
          fill="currentColor"
          height="14"
          viewBox="0 0 24 24"
          width="14"
        >
          <path
            d="M12 2l2.09 6.26L20.18 10l-6.09 1.74L12 18l-2.09-6.26L3.82 10l6.09-1.74L12 2z"
          />
          <path
            d="M19 15l1.04 3.13L23.18 19l-3.14.87L19 23l-1.04-3.13L14.82 19l3.14-.87L19 15z"
            opacity="0.7"
          />
        </svg>
         
        ZERO
         DISTILL
      </button>
      <button
        class="os-btn os-btn-ghost "
        title="ゴミ箱"
      >
        <svg
          fill="none"
          height="14"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
        >
          <polyline
            points="3 6 5 6 21 6"
          />
          <path
            d="M19 6v14a2 2 0 01-2 2H7a2 2 0 01-2-2V6m3 0V4a2 2 0 012-2h4a2 2 0 012 2v2"
          />
        </svg>
      </button>
      <button
        class="os-btn os-btn-ghost"
      >
        <svg
          fill="none"
          height="14"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
        >
          <path
            d="M21 15v4a2 2 0 01-2 2H5a2 2 0 01-2-2v-4"
          />
          <polyline
            points="7 10 12 15 17 10"
          />
          <line
            x1="12"
            x2="12"
            y1="15"
            y2="3"
          />
        </svg>
      </button>
      <button
        class="os-btn os-btn-ghost"
      >
        <svg
          fill="none"
          height="14"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
        >
          <path
            d="M21 15v4a2 2 0 01-2 2H5a2 2 0 01-2-2v-4"
          />
          <polyline
            points="17 8 12 3 7 8"
          />
          <line
            x1="12"
            x2="12"
            y1="3"
            y2="15"
          />
        </svg>
      </button>
    </div>
  </header>
  <button
    class="os-btn os-btn-purple"
    style="margin-bottom: 16px; width: 100%; justify-content: center;"
  >
    <svg
      fill="none"
      height="14"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="14"
    >
      <line
        x1="12"
        x2="12"
        y1="5"
        y2="19"
      />
      <line
        x1="5"
        x2="19"
        y1="12"
        y2="12"
      />
    </svg>
     新しいプロンプトを追加
  </button>
  <div
    class="os-filter-bar"
  >
    <button
      class="os-btn os-btn-sm os-btn-purple"
    >
      すべて
    </button>
    <button
      class="os-btn os-btn-sm os-btn-ghost"
    >
      未送信
    </button>
    <button
      class="os-btn os-btn-sm os-btn-ghost"
    >
      送信済み
    </button>
    <button
      class="os-btn os-btn-sm os-btn-ghost"
    >
      解決済み
    </button>
    <button
      class="os-btn os-btn-sm os-btn-ghost"
    >
      未解決
    </button>
  </div>
  <div
    class="os-bubble-list"
  >
    <div
      class="os-empty"
    >
      <div
        class="os-empty-icon"
      >
        <svg
          fill="none"
          height="48"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="48"
        >
          <polygon
            fill="currentColor"
            points="13 2 3 14 12 14 11 22 21 10 12 10 13 2"
          />
        </svg>
      </div>
      <p>
        <strong>
          プロンプトがまだありません
        </strong>
      </p>
      <p>
        上の「新しいプロンプトを追加」から始めましょう
      </p>
    </div>
  </div>
</div>
`;

exports[`UI スナップショット > Phantom > ダークモード 1`] = `
<div
  class="ph-root dark"
>
  <header
    class="ph-header"
  >
    <div
      style="display: flex; align-items: center; gap: 10px;"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-wand-sparkles"
        fill="none"
        height="22"
        stroke="white"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="22"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m21.64 3.64-1.28-1.28a1.21 1.21 0 0 0-1.72 0L2.36 18.64a1.21 1.21 0 0 0 0 1.72l1.28 1.28a1.2 1.2 0 0 0 1.72 0L21.64 5.36a1.2 1.2 0 0 0 0-1.72"
        />
        <path
          d="m14 7 3 3"
        />
        <path
          d="M5 6v4"
        />
        <path
          d="M19 14v4"
        />
        <path
          d="M10 2v2"
        />
        <path
          d="M7 8H3"
        />
        <path
          d="M21 16h-4"
        />
        <path
          d="M11 3H9"
        />
      </svg>
      <div>
        <div
          class="ph-logo"
        >
          PHANTOM
        </div>
        <div
          class="ph-subtitle"
        >
          text mask & transform engine
        </div>
      </div>
    </div>
  </header>
  <div
    class="ph-main"
  >
    <div
      class="ph-panel"
    >
      <div
        class="ph-panel-label"
      >
        INPUT
      </div>
      <textarea
        class="ph-input"
        placeholder="テキストを入力..."
      />
    </div>
    <div
      class="ph-panel"
    >
      <div
        class="ph-panel-label"
      >
        OUTPUT
      </div>
      <div
        class="ph-output-wrap"
      >
        <div
          class="ph-output"
        />
        <button
          class="ph-copy-btn"
        >
          コピー
        </button>
      </div>
    </div>
    <div
      class="ph-rules-panel"
    >
      <div
        class="ph-tabs"
      >
        <button
          class="ph-tab active"
        >
          置換
        </button>
        <button
          class="ph-tab"
        >
          ランダム
        </button>
      </div>
      <div
        class="ph-pair-row"
      >
        <input
          class="ph-field"
          placeholder="変換前"
          value=""
        />
        <span
          class="ph-arrow"
        >
          →
        </span>
        <input
          class="ph-field"
          placeholder="変換後"
          value=""
        />
        <button
          aria-label="ペアを削除"
          class="ph-del-btn"
        >
          ×
        </button>
      </div>
      <button
        class="ph-add-btn"
      >
        ＋ ペアを追加
      </button>
    </div>
  </div>
</div>
`;

exports[`UI スナップショット > Phantom > ライトモード 1`] = `
<div
  class="ph-root light"
>
  <header
    class="ph-header"
  >
    <div
      style="display: flex; align-items: center; gap: 10px;"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-wand-sparkles"
        fill="none"
        height="22"
        stroke="white"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="22"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m21.64 3.64-1.28-1.28a1.21 1.21 0 0 0-1.72 0L2.36 18.64a1.21 1.21 0 0 0 0 1.72l1.28 1.28a1.2 1.2 0 0 0 1.72 0L21.64 5.36a1.2 1.2 0 0 0 0-1.72"
        />
        <path
          d="m14 7 3 3"
        />
        <path
          d="M5 6v4"
        />
        <path
          d="M19 14v4"
        />
        <path
          d="M10 2v2"
        />
        <path
          d="M7 8H3"
        />
        <path
          d="M21 16h-4"
        />
        <path
          d="M11 3H9"
        />
      </svg>
      <div>
        <div
          class="ph-logo"
        >
          PHANTOM
        </div>
        <div
          class="ph-subtitle"
        >
          text mask & transform engine
        </div>
      </div>
    </div>
  </header>
  <div
    class="ph-main"
  >
    <div
      class="ph-panel"
    >
      <div
        class="ph-panel-label"
      >
        INPUT
      </div>
      <textarea
        class="ph-input"
        placeholder="テキストを入力..."
      />
    </div>
    <div
      class="ph-panel"
    >
      <div
        class="ph-panel-label"
      >
        OUTPUT
      </div>
      <div
        class="ph-output-wrap"
      >
        <div
          class="ph-output"
        />
        <button
          class="ph-copy-btn"
        >
          コピー
        </button>
      </div>
    </div>
    <div
      class="ph-rules-panel"
    >
      <div
        class="ph-tabs"
      >
        <button
          class="ph-tab active"
        >
          置換
        </button>
        <button
          class="ph-tab"
        >
          ランダム
        </button>
      </div>
      <div
        class="ph-pair-row"
      >
        <input
          class="ph-field"
          placeholder="変換前"
          value=""
        />
        <span
          class="ph-arrow"
        >
          →
        </span>
        <input
          class="ph-field"
          placeholder="変換後"
          value=""
        />
        <button
          aria-label="ペアを削除"
          class="ph-del-btn"
        >
          ×
        </button>
      </div>
      <button
        class="ph-add-btn"
      >
        ＋ ペアを追加
      </button>
    </div>
  </div>
</div>
`;
